--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "spinkles-bot",
+  "name": "timersmwg",
   "version": "1.0.0",
   "description": "A discord bot",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon --exec babel-node -- src/index.js",
     "flow": "flow"
@@ -17,14 +18,14 @@
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.5",
     "@babel/node": "^7.10.1",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-optional-chaining": "^7.10.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-env": "^7.23.5",
     "@babel/preset-flow": "^7.10.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
